--- a/css/Navigation Tree-Composition.css
+++ b/css/Navigation Tree-Composition.css
@@ -2028,11 +2028,11 @@ div.Heading2
   font-style: normal;
   font-variant: normal;
   font-weight: normal;
-  margin-bottom: 0.0pt;
+  margin-bottom: 3px;
   margin-left: 0pt;
   margin-right: 0pt;
   margin-top: 12.0pt;
-  padding-bottom: 10px;
+  padding-bottom: 3px;
   text-align: Left;
   text-indent: 0pt;
   text-transform: none;
@@ -2041,10 +2041,10 @@ div.Heading2
 
 .Heading2_outer
 {
-  margin-bottom: 0.0pt;
+  margin-bottom: 3px;
   margin-right: 0pt;
   margin-top: 12.0pt;
-  padding-bottom: 10px;
+  padding-bottom: 3px;
 }
 
 .Heading2_inner
@@ -2122,11 +2122,11 @@ div.Heading3
   font-style: normal;
   font-variant: normal;
   font-weight: bold;
-  margin-bottom: 0.0pt;
+  margin-bottom: 3px;
   margin-left: 0pt;
   margin-right: 0pt;
   margin-top: 12.0pt;
-  padding-bottom: 10px;
+  padding-bottom: 3px;
   text-align: Left;
   text-indent: 0pt;
   text-transform: none;
@@ -2135,10 +2135,10 @@ div.Heading3
 
 .Heading3_outer
 {
-  margin-bottom: 0.0pt;
+  margin-bottom: 3px;
   margin-right: 0pt;
   margin-top: 12.0pt;
-  padding-bottom: 10px;
+  padding-bottom: 3px;
 }
 
 .Heading3_inner
@@ -2451,10 +2451,9 @@ div.Note
   margin-bottom: 6.0pt;
   margin-left: 68.4pt;
   margin-right: 0pt;
-  margin-top: -5px;
-  padding-bottom: 18px;
+  margin-top: 3.0pt;
   text-align: Left;
-  text-indent: -25px;
+  text-indent: -32.400000000000006pt;
   text-transform: none;
   vertical-align: baseline;
 }
@@ -2463,8 +2462,7 @@ div.Note
 {
   margin-bottom: 6.0pt;
   margin-right: 0pt;
-  margin-top: -5px;
-  padding-bottom: 18px;
+  margin-top: 3.0pt;
 }
 
 .Note_inner
@@ -3024,52 +3022,6 @@ div.Related_Topic
 }
 
 .Related_Topic_inner
-{
-  color: #000000;
-  font-family: Arial;
-  font-size: 11.0pt;
-  font-style: normal;
-  font-variant: normal;
-  font-weight: normal;
-  text-align: Left;
-  text-transform: none;
-  vertical-align: baseline;
-  margin-left: 0pt;
-  margin-right: 0pt;
-  margin-top: 0pt;
-  margin-bottom: 0pt;
-  padding-left: 0pt;
-  padding-right: 0pt;
-  padding-top: 0pt;
-  padding-bottom: 0pt;
-}
-
-div.Related_Topics
-{
-  color: #000000;
-  font-family: Arial;
-  font-size: 11.0pt;
-  font-style: normal;
-  font-variant: normal;
-  font-weight: normal;
-  margin-bottom: 6.0pt;
-  margin-left: 0pt;
-  margin-right: 0pt;
-  margin-top: 2.0pt;
-  text-align: Left;
-  text-indent: 0pt;
-  text-transform: none;
-  vertical-align: baseline;
-}
-
-.Related_Topics_outer
-{
-  margin-bottom: 6.0pt;
-  margin-right: 0pt;
-  margin-top: 2.0pt;
-}
-
-.Related_Topics_inner
 {
   color: #000000;
   font-family: Arial;
@@ -4351,6 +4303,7 @@ table.Table_-_Feature_Description
   padding-right: 4pt;
   padding-top: 4pt;
   text-align: right;
+  width: 90%;
 }
 
 table.UnstructMasterPageMaps
