--- a/web/webHelp/css/Application Support.css
+++ b/web/webHelp/css/Application Support.css
@@ -1288,11 +1288,11 @@ div.Heading2
   font-style: normal;
   font-variant: normal;
   font-weight: normal;
-  margin-bottom: 0.0pt;
+  margin-bottom: 3px;
   margin-left: 0pt;
   margin-right: 0pt;
   margin-top: 12.0pt;
-  padding-bottom: 10px;
+  padding-bottom: 3px;
   text-align: Left;
   text-indent: 0pt;
   text-transform: none;
@@ -1301,10 +1301,10 @@ div.Heading2
 
 .Heading2_outer
 {
-  margin-bottom: 0.0pt;
+  margin-bottom: 3px;
   margin-right: 0pt;
   margin-top: 12.0pt;
-  padding-bottom: 10px;
+  padding-bottom: 3px;
 }
 
 .Heading2_inner
@@ -1382,11 +1382,11 @@ div.Heading3
   font-style: normal;
   font-variant: normal;
   font-weight: bold;
-  margin-bottom: 0.0pt;
+  margin-bottom: 3px;
   margin-left: 0pt;
   margin-right: 0pt;
   margin-top: 12.0pt;
-  padding-bottom: 10px;
+  padding-bottom: 3px;
   text-align: Left;
   text-indent: 0pt;
   text-transform: none;
@@ -1395,10 +1395,10 @@ div.Heading3
 
 .Heading3_outer
 {
-  margin-bottom: 0.0pt;
+  margin-bottom: 3px;
   margin-right: 0pt;
   margin-top: 12.0pt;
-  padding-bottom: 10px;
+  padding-bottom: 3px;
 }
 
 .Heading3_inner
@@ -1711,10 +1711,9 @@ div.Note
   margin-bottom: 2.0pt;
   margin-left: 68.4pt;
   margin-right: 0pt;
-  margin-top: -10px;
-  padding-bottom: 18px;
+  margin-top: 7.0pt;
   text-align: Left;
-  text-indent: -25px;
+  text-indent: -32.400000000000006pt;
   text-transform: none;
   vertical-align: baseline;
 }
@@ -1723,8 +1722,7 @@ div.Note
 {
   margin-bottom: 2.0pt;
   margin-right: 0pt;
-  margin-top: -10px;
-  padding-bottom: 18px;
+  margin-top: 7.0pt;
 }
 
 .Note_inner
@@ -2692,6 +2690,7 @@ table.Table_-_Feature_Description
   padding-right: 4pt;
   padding-top: 4pt;
   text-align: right;
+  width: 90%;
 }
 
 table.UnstructMasterPageMaps
