--- a/web/css/sidemenu.css
+++ b/web/css/sidemenu.css
@@ -168,11 +168,21 @@ ul.sublist_4_report {
 }
 
 ul.sublist_4_report a {
+	/*
 	color: #400080;
 	background-color: #FFFFFF;
 	font-size: 0.8em;
 	font-weight: bold;
 	font-family: Verdana, Helvetica, Arial, sans-serif;
+	text-indent: 1em;
+	padding-top: 0.1em;
+	padding-bottom: 0.1em;
+	*/
+	background-color: #FFFFFF;
+	color: black;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 0.8em;
+	font-weight: normal;
 	text-indent: 1em;
 	padding-top: 0.1em;
 	padding-bottom: 0.1em;
