--- a/web/css/caLab.css
+++ b/web/css/caLab.css
@@ -762,6 +762,43 @@ tr.gridTableHeader {
 	font-weight: normal;
 }
 	
+	
+.smalltable {
+	width: 400px;
+	border-width: 1px;
+	border-color: #cccccc;
+	border-style: solid;
+	border-collapse: collapse;
+}
+
+.smalltable th {
+	font-family: verdana, arial, helvetica, sans-serif;
+	font-size: 0.8em;
+	padding: 5px 30px 10px 30px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #cccccc;
+}
+
+.smalltable td {
+	font-family: verdana, arial, helvetica, sans-serif;
+	font-size: 0.7em;
+	padding: 5px 0 5px 5px;
+	border-width: 1px;
+	border-color: #cccccc;
+	border-style: solid;
+	vertical-align: middle;
+}
+
+tr.smallTableHeader {
+	height: 20px;
+	font-size: 0.85em;
+	font-weight: normal;
+}
+	
+	
+	
+	
 #publicLinks, ul { /* for the public links below the welcome content of the home page */
 
 	font-family: arial, helvetica, verdana, sans-serif;
