--- a/web/css/caLab.css
+++ b/web/css/caLab.css
@@ -186,6 +186,7 @@ td.subMenuFooter { /* for the last row in the submenu left of the footer menu */
 }
 
 td.footerVersion { /* for the items under the sub-menu title elements */
+	font-family: arial, helvetica, verdana, sans-serif;
 	font-size: 0.6em;
 	background-color: #ffffff; /* constant: white */
 	color: #000000; /* constant: black */
