--- a/web/css/caLab.css
+++ b/web/css/caLab.css
@@ -333,6 +333,18 @@ FORM BEGINS
 	border-right: 1px solid #5c5c5c; /* constant: dark gray */
 }
 
+.subformTitle { /* for header cells (top) of forms */
+	font-family: arial, helvetica, verdana, sans-serif;
+	font-size: 0.8em;
+	font-weight: bold;
+	padding-left: 0.8em;
+	background-color: #AAAAAB; /* constant: dark gray */
+	color: #ffffff; /* constant: white */
+	border-top: 1px solid #5c5c5c; /* constant: dark gray */
+	border-left: 1px solid #5c5c5c; /* constant: dark gray */
+	border-right: 1px solid #5c5c5c; /* constant: dark gray */
+}
+
 td.formField { /* for the cell that contains the form elements */
 	font-family: arial, helvetica, verdana, sans-serif;
 	font-size: 0.7em;
@@ -1376,5 +1388,45 @@ input.noBorderButton {
 	text-decoration: underline;
 	border:0px solid; 
 	background-color: #f4f4f5;
-} 
+}
+
+	
+.smalltable3 {
+	border-width: 1px;
+	border-color: #cccccc;
+	border-style: solid;
+	border-collapse: collapse;
+	color: #5C5C5C;
+}
+
+	
+.smalltable2 {
+	width: 600px;
+	border-width: 1px;
+	border-color: #cccccc;
+	border-style: solid;
+	border-collapse: collapse;
+	color: #5C5C5C;
+}
+
+.smalltable2 th {
+	font-family: verdana, arial, helvetica, sans-serif;
+	font-size: 0.65em;
+	padding: 5px 30px 10px 30px;
+	border-style: none;
+	border-width: 1px;
+	border-color: #cccccc;
+	color: #5C5C5C;
+}
+
+.smalltable2 td {
+	font-family: verdana, arial, helvetica, sans-serif;
+	font-size: 0.7em;
+	padding: 5px 0 5px 5px;
+	border-width: 1px;
+	border-color: #cccccc;
+	border-style: none;
+	vertical-align: middle;
+	color: #5C5C5C;
+}
 
