--- a/web/css/tabmenu.css
+++ b/web/css/tabmenu.css
@@ -1,3 +1,5 @@
+<style type="text/css">
+
 /*Credits: Dynamic Drive CSS Library */
 /*URL: http://www.dynamicdrive.com/style/ */
 
@@ -71,3 +73,5 @@ background-position: 100% -125px;
 padding-bottom: 8px; /* 3) Bottom padding of selected tab. Should equal (1) PLUS (2) above */
 top: 0;
 }
+
+</style>
