--- a/web/css/tabmenu.css
+++ b/web/css/tabmenu.css
@@ -1,10 +1,8 @@
-<style type="text/css">
-
 /*Credits: Dynamic Drive CSS Library */
 /*URL: http://www.dynamicdrive.com/style/ */
 
 .animatedtabs{
-border-bottom: 1px solid gray;
+/*border-bottom: 1px solid gray;*/
 overflow: hidden;
 width: 100%;
 font-size: 14px; /*font of menu text*/
@@ -73,5 +71,3 @@ background-position: 100% -125px;
 padding-bottom: 8px; /* 3) Bottom padding of selected tab. Should equal (1) PLUS (2) above */
 top: 0;
 }
-
-</style>
