--- a/web/css/tabmenu.css
+++ b/web/css/tabmenu.css
@@ -61,7 +61,13 @@ padding-bottom: 8px; /* 3) Bottom padding of selected tab. Should equal (1) PLUS
 top: 0;
 }
 
-.animatedtabs a:hover, a:visited{
+.animatedtabs a:hover{
+background-position: 0% -125px;
+text-decoration: none;
+top: 0;
+}
+
+.animatedtabs a:visited{
 background-position: 0% -125px;
 text-decoration: none;
 top: 0;
