--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1417,7 +1417,7 @@ input.noBorderButton {
 	font-size: 1.02em;
 	text-decoration: underline;
 	border:0px solid;
-	background-color: #f4f4f5;
+	#background-color: #f4f4f5;
 }
 
 input.noBorderText {
@@ -1656,7 +1656,7 @@ input.noBorderText {
 	border-style: solid;
 	border-collapse: collapse;
 	color: #5C5C5C;
-	background-color: #EBFBF6;
+	background-color: #D3E4DE;
 }
 
 .subSubmissionView caption {
@@ -1670,9 +1670,9 @@ input.noBorderText {
 	font-family: verdana, arial, helvetica, sans-serif;
 	font-size: 0.60em;
 	padding: 3px 3px 3px 3px;
-	color: #5C5C5C;
+	color: #FFFFFF;
 	font-weight: bold;
-	background-color: #D3E4DE;
+	background-color: #6a8989;
 	text-align: left;
 }
 
@@ -1688,6 +1688,45 @@ input.noBorderText {
 	color: #706C60;
 }
 
+
+.subSubmissionView2 {
+	border-width: 1px;
+	border-color: #cccccc;
+	padding: 3px 3px 3px 3px;
+	border-style: solid;
+	border-collapse: collapse;
+	color: #5C5C5C;
+	background-color: #D3E4DE;
+}
+
+.subSubmissionView2 caption {
+	font-family: verdana, arial, helvetica, sans-serif;
+	font-size: 0.65em;
+	font-weight: bold;
+	color: #5C5C5C;
+}
+
+.subSubmissionView2 th {
+	font-family: verdana, arial, helvetica, sans-serif;
+	font-size: 0.60em;
+	padding: 3px 3px 3px 3px;
+	color: #FFFFFF;
+	font-weight: bold;
+	background-color: #6a8989;
+	text-align: left;
+}
+
+.subSubmissionView2 td {
+	font-family: verdana, arial, helvetica, sans-serif;
+	font-size: 0.60em;
+	padding: 3px 3px 3px 3px;
+	border-width: 0px;
+	border-color: #cccccc;
+	border-style: solid;
+	vertical-align: top;
+	text-align: left;
+	color: #706C60;
+}
 
 .summaryViewLayer4 {
 	border-width: 1px;
